fixed examples collapsing in firefox,  horizontal scroll, and removed skills from header.

--- a/src/scss/_examples.scss
+++ b/src/scss/_examples.scss
@@ -7,7 +7,7 @@
   .example {
     background-size: 110%;
     box-sizing: border-box;
-    filter: blur(20%);
+    min-height: 54vw;
     overflow: hidden;
     padding-bottom: 52.7%;
     position: relative;
@@ -16,18 +16,19 @@
     
 
     @media screen and (min-width: 425px) {
-      width: 50%;
+      min-height: 27vw;
       padding-bottom: 26.35%;
+      width: 50%;
     }
 
     @media screen and (min-width: 768px) {
-      width: 33.333333333%;
+      min-height: 17vw;
       padding-bottom: 17.5666666667%;
+      width: 33.333333333%;
     }
 
     &:hover {
       background-size: 105%;
-      filter: blur(20%);
 
       p {
         bottom: 0;
@@ -83,6 +84,11 @@
   position: absolute;
   width: 100%;
   height: 100%;
+}
+
+.blurrer {
+  margin-top: 50%;
+  visibility: hidden;
 }
 
 .sw-portfolio {
