--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -8,7 +8,7 @@ footer {
   flex-direction: column;
   font-family: 'Open Sans', sans-serif;
   padding: 1em 0;
-  width: 100%;
+  width: 100vw;
 
   @media screen and (min-width: $bp) {
     flex-direction: row;
