--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -5,7 +5,7 @@ header {
   height: 100vh;
   position: relative;
   text-align: center;
-  width: 100%;
+  width: 100vw;
 
   a {
     color: lighten($blue, 70%);
