--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -29,8 +29,10 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
 	background-color: #000;
+	line-height: 1;
+	max-width: 100%;
+	overflow-x: hidden;
 }
 ol, ul {
 	list-style: none;
